[project]
name = "maskss"
version = "0.1.0"
description = "Homework project"
requires-python = ">=3.14"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = ["venv", ".venv", ".git", "__pycache__"]
[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
